sorry but this bugs me (#1217)

--- a/docs/hub/_redirects.yml
+++ b/docs/hub/_redirects.yml
@@ -16,3 +16,4 @@ searching-the-hub: /docs/huggingface_hub/searching-the-hub
 # end of first_section
 api-webhook: webhooks
 adapter-transformers: adapters
+security-two-fa: security-2fa
