--- a/.github/workflows/build_documentation.yml
+++ b/.github/workflows/build_documentation.yml
@@ -16,5 +16,6 @@ jobs:
       package_name: hub
       path_to_docs: hub-docs/docs/hub/
       additional_args: --not_python_module
+      custom_container: "" # no need for transformer's docker image
     secrets:
       hf_token: ${{ secrets.HF_DOC_BUILD_PUSH }}
