Add "Set URL query and hash" page (#1160)
* Add "Set URL query and hash" page

* Update docs/hub/spaces-advanced.md

* Set the target origin

* Update docs/hub/_toctree.yml

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/hub/spaces-url-query-hash.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/hub/spaces-url-query-hash.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/hub/spaces-url-query-hash.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/hub/spaces-url-query-hash.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Rename docs/hub/spaces-url-query-hash.md -> docs/hub/spaces-handle-url-parameters.md

* Add a text about Streamlit and Gradio

* Add note

* Add a link to the sample Space

* Update docs/hub/spaces-handle-url-parameters.md

Co-authored-by: Abubakar Abid <abubakar@huggingface.co>

* Update docs/hub/spaces-handle-url-parameters.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

---------

Co-authored-by: Julien Chaumond <julien@huggingface.co>
Co-authored-by: Abubakar Abid <abubakar@huggingface.co>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -257,6 +257,8 @@
       title: How to Add a Space to ArXiv
     - local: spaces-cookie-limitations
       title: Cookie limitations in Spaces
+    - local: spaces-handle-url-parameters
+      title: Set URL query and hash
 - local: other
   title: Other
   isExpanded: true
