--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -165,6 +165,17 @@
         title: Datasets
       - local: datasets-duckdb
         title: DuckDB
+        sections:
+          - local: datasets-duckdb-auth
+            title: Authentication for private and gated datasets
+          - local: datasets-duckdb-select
+            title: Query datasets
+          - local: datasets-duckdb-sql
+            title: Perform SQL operations
+          - local: datasets-duckdb-combine-and-export
+            title: Combine datasets and export
+          - local: datasets-duckdb-vector-similarity-search
+            title: Perform vector similarity search
       - local: datasets-pandas
         title: Pandas
       - local: datasets-webdataset
