--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -161,8 +161,12 @@
   - local: datasets-libraries
     title: Integrated Libraries
     sections:
+      - local: datasets-argilla
+        title: Argilla
       - local: datasets-dask
         title: Dask
+      - local: datasets-distilabel
+        title: Distilabel
       - local: datasets-usage
         title: Datasets
       - local: datasets-duckdb
