Add `Argilla` and `distilabel` to `https://huggingface.co/docs/hub/datasets-libraries` (#1340)
* Update datasets-libraries.md

* Create datasets-argilla.md

* Create datasets-distilabel.md

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-distilabel.md

* Update datasets-argilla.md

* Apply suggestions from code review

Co-authored-by: Daniel van Strien <davanstrien@users.noreply.github.com>

* Update datasets-libraries.md

* Apply suggestions from code review

Co-authored-by: Daniel van Strien <davanstrien@users.noreply.github.com>

* Update datasets-distilabel.md

* Update datasets-argilla.md

* Update datasets-distilabel.md

* Update datasets-distilabel.md

* Update datasets-argilla.md

* Update datasets-distilabel.md

* Update datasets-argilla.md

* Apply suggestions from code review

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update _toctree.yml

* Update _toctree.yml

* Update docs/hub/datasets-argilla.md

Co-authored-by: Daniel Vila Suero <daniel@argilla.io>

* Apply suggestions from code review

Co-authored-by: Daniel Vila Suero <daniel@argilla.io>

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-argilla.md

* Update datasets-distilabel.md

* Update datasets-distilabel.md

* Update datasets-distilabel.md

* Update datasets-distilabel.md

* Update datasets-distilabel.md

* Update datasets-argilla.md

* Update datasets-distilabel.md

* Apply suggestions from code review

Co-authored-by: Quentin Lhoest <42851186+lhoestq@users.noreply.github.com>

---------

Co-authored-by: Daniel van Strien <davanstrien@users.noreply.github.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Daniel Vila Suero <

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -161,10 +161,14 @@
   - local: datasets-libraries
     title: Integrated Libraries
     sections:
+      - local: datasets-argilla
+        title: Argilla
       - local: datasets-dask
         title: Dask
       - local: datasets-usage
         title: Datasets
+      - local: datasets-distilabel
+        title: Distilabel
       - local: datasets-duckdb
         title: DuckDB
         sections:
