--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -313,6 +313,10 @@
         title: Dataset viewer for Private datasets
       - local: enterprise-hub-resource-groups
         title: Resource Groups (Advanced Access Control)
+      - local: train-dgx-cloud
+        title: Train on NVIDIA DGX Cloud
+      - local: inference-nim
+        title: Serverless Inference powered by NVIDIA
   - local: billing
     title: Billing
   - local: security
