move to Advanced Compute Options

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -313,10 +313,8 @@
         title: Dataset viewer for Private datasets
       - local: enterprise-hub-resource-groups
         title: Resource Groups (Advanced Access Control)
-      - local: train-dgx-cloud
-        title: Train on NVIDIA DGX Cloud
-      - local: inference-nim
-        title: Serverless Inference powered by NVIDIA
+      - local: advanced-compute-options
+        title: Advanced Compute Options
   - local: billing
     title: Billing
   - local: security
