doc for NVIDIA EH features (#1353)
* doc for NVIDIA EH features

* file extension

* move to Advanced Compute Options

* Update docs/hub/advanced-compute-options.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

---------

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -324,6 +324,8 @@
         title: Dataset viewer for Private datasets
       - local: enterprise-hub-resource-groups
         title: Resource Groups (Advanced Access Control)
+      - local: advanced-compute-options
+        title: Advanced Compute Options
   - local: billing
     title: Billing
   - local: security
