add audio dataset docs page to TOC

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -217,6 +217,8 @@
         title: Manual Configuration
       - local: datasets-image
         title: Image Dataset
+      - local: datasets-audio
+        title: Audio Dataset
 - local: spaces
   title: Spaces
   isExpanded: true
