add audio dataset docs page to TOC (#1381)
* add audio dataset docs page to TOC

* alphabetic order

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -215,6 +215,8 @@
         title: File names and splits
       - local: datasets-manual-configuration
         title: Manual Configuration
+      - local: datasets-audio
+        title: Audio Dataset
       - local: datasets-image
         title: Image Dataset
 - local: spaces
