First draft for text-to-image

--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -12,4 +12,6 @@
   - sections:
     - local: tasks/fill-mask
       title: Fill Mask
+    - local: tasks/text-to-image
+      title: Text-to-image
   title: Parameters
