--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -7,7 +7,7 @@
     title: Getting Started
   - local: rate_limits
     title: Rate Limits
-  title: title
+  title: Getting Started
 - sections:
   - local: parameters
     title: Parameters
