--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -14,6 +14,6 @@
   - sections:
     - local: tasks/fill_mask
       title: Fill Mask
-    - local: tasks/text-to-image
+    - local: tasks/text_to_image
       title: Text-to-image
   title: Parameters
