Incorporate reviewer's feedback

--- a/docs/api-inference/_redirects.yml
+++ b/docs/api-inference/_redirects.yml
@@ -1,5 +1,5 @@
-quicktour: overview
+quicktour: index
 detailed_parameters: parameters
 parallelism: TODO
 usage: getting_started
-faq: overview
+faq: index
