First draft for text-to-image, image-to-image + generate script (#1384)
* First draft for text-to-image

* add correct code snippets

* Update docs/api-inference/tasks/text-to-image.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* better table?

* Generate tasks pages from script (#1386)

* init project

* first script to generate task pages

* commit generated content

* generate payload table as well

* so undecisive

* hey

* better ?

* Add image-to-image page

* template for snippets section + few things

* few things

* Update scripts/api-inference/templates/specs_headers.handlebars

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update scripts/api-inference/templates/specs_headers.handlebars

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* generate

* fetch inference status

---------

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -14,5 +14,9 @@
   - sections:
     - local: tasks/fill_mask
       title: Fill Mask
+    - local: tasks/image_to_image
+      title: Image-to-image
+    - local: tasks/text_to_image
+      title: Text-to-image
     title: Detailed Task Parameters
   title: API Reference
