first draft to add text-generation parameters

--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -16,6 +16,8 @@
       title: Fill Mask
     - local: tasks/image_to_image
       title: Image-to-image
+    - local: tasks/text_generation
+      title: Text generation
     - local: tasks/text_to_image
       title: Text-to-image
     title: Detailed Task Parameters
