--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -18,6 +18,8 @@
       title: Fill Mask
     - local: tasks/image_to_image
       title: Image-to-image
+    - local: tasks/question_answering
+      title: Question answering
     - local: tasks/summarization
       title: Summarization
     - local: tasks/text_generation
