Draft to add text-generation parameters (#1393)
* first draft to add text-generation parameters

* headers

* more structure

* add chat-completion

* better handling of arrays

* better handling of parameters

* Add new tasks pages (fill mask, summarization, question answering, sentence similarity) (#1394)

* add fill mask

* add summarization

* add question answering

* Table question answering

* handle array output

* Add sentence similarity

* text classification (almost)

* better with an enum

* Add mask token

* capitalize

* remove sentence-similarity

* Update docs/api-inference/tasks/table_question_answering.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

---------

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* mention chat completion in text generation docs

* fix chat completion snippets

---------

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -12,11 +12,23 @@
   - local: parameters
     title: Parameters
   - sections:
+    - local: tasks/chat_completion
+      title: Chat Completion
     - local: tasks/fill_mask
       title: Fill Mask
     - local: tasks/image_to_image
-      title: Image-to-image
+      title: Image to Image
+    - local: tasks/question_answering
+      title: Question Answering
+    - local: tasks/summarization
+      title: Summarization
+    - local: tasks/table_question_answering
+      title: Table Question Answering
+    - local: tasks/text_classification
+      title: Text Classification
+    - local: tasks/text_generation
+      title: Text Generation
     - local: tasks/text_to_image
-      title: Text-to-image
+      title: Text to Image
     title: Detailed Task Parameters
   title: API Reference
