--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -30,5 +30,7 @@
       title: Text Generation
     - local: tasks/text_to_image
       title: Text to Image
+    - local: tasks/token_classification
+      title: Token Classification
     title: Detailed Task Parameters
   title: API Reference
