--- a/docs/api-inference/_toctree.yml
+++ b/docs/api-inference/_toctree.yml
@@ -20,6 +20,8 @@
       title: Chat Completion
     - local: tasks/fill_mask
       title: Fill Mask
+    - local: tasks/image_classification
+      title: Image Classification
     - local: tasks/image_to_image
       title: Image to Image
     - local: tasks/question_answering
